--- a/styles/style.css
+++ b/styles/style.css
@@ -36,25 +36,58 @@ body{
     max-height: 300px ;
     border-radius: 10px;
     background-color: var(--color-default);
-    border: solid 15px white;
+    border: solid 15px #eeeded;
+    font-weight: 900;
+    text-align: center;
+    opacity: 90%;
 }
 
 .normal{
-    background-color: var(--color-default);
+    border-color:#eeeded;
 }
 .mistico{
-    background-color: var(--color-mystic);
+    border-color: #efa8e4;
 }
 .lendario{
-    background-color: var(--color-legendary);
+    border-color: #ffe05d;
 }
 .figuras{
     padding: 15px;
     margin: auto;
-    max-width: 80%;
-    max-height: 50%;
+    width: 70%;
+    height: 70%;
 }
 .textoDescritivo{
     font-size: smaller;
-    width: 80%;   
+    width: 100%;  
+    text-align: left;
+    background-color: white;
+     
 }
+.imgContainer{
+    display: flex;
+    align-content: center;
+    text-align: center;
+    height: 45%;
+    background-color: white;
+    border-radius: 100%;
+   
+
+}
+ul{
+    display: flex;
+    flex-direction: row;
+    align-content:space-between;
+    text-align: center;
+    background-color: white;
+    
+   
+}
+li{
+
+border-radius: 15px;
+text-decoration-style: none;
+list-style: none;
+padding: 5px;
+}
+
