--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,7 @@ body{
     font-weight: 900;
     text-align: center;
     opacity: 90%;
+    text-transform: capitalize;
 }
 
 .normal{
@@ -62,7 +63,8 @@ body{
     width: 100%;  
     text-align: left;
     background-color: white;
-     
+    color: black;
+    text-transform: initial;
 }
 .imgContainer{
     display: flex;
@@ -84,10 +86,10 @@ ul{
    
 }
 li{
-
-border-radius: 15px;
-text-decoration-style: none;
-list-style: none;
-padding: 5px;
+    border-radius: 15px;
+    text-decoration-style: none;
+    list-style: none;
+    padding: 5px;
+    color: black;
 }
 
