--- a/src/components/BookCover/style.module.css
+++ b/src/components/BookCover/style.module.css
@@ -1,9 +1,13 @@
 .cover{
     background-color: #2a394c;
-    width: 80%;
+    width: 70vw;
     min-height: 70vh;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     position: relative;
-
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    box-shadow: 3px 3px 3px black;
 }
