--- a/src/components/PokeSpecs/style.module.css
+++ b/src/components/PokeSpecs/style.module.css
@@ -34,5 +34,22 @@
 
 .sideInfo{
     width: 40%;
-    background-color: black;
+
+}
+.sideTitle{
+    width: 90%;
+    box-sizing: border-box;
+    margin: 5%;
+    padding: 1%;
+    background-color: #2a394c;
+    color: #d9e1e0;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    font-size: 1.5rem;
+}
+.pokeDetails{
+    list-style: none;
+    max-width: 90%;
+    margin: 7%;
 }
