Feature: implemented the list compoment

--- a/src/components/BookPage/style.module.css
+++ b/src/components/BookPage/style.module.css
@@ -1,5 +1,5 @@
 .page{
-    background-color: #e8e1c5;
+    background-color: #f4efd6;
     min-height: 66vh;
     position: absolute;
     left: 0;
