--- a/src/components/BookCover/style.module.css
+++ b/src/components/BookCover/style.module.css
@@ -1,7 +1,7 @@
 .cover{
     background-color: #2a394c;
     width: 60vw;
-    min-height: 70vh;
+    height: 70vh;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     position: relative;
